[package]
name = "udp_server"
version = "0.1.1"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/udp_server"
documentation = "https://docs.rs/udp_server/"
description = "fast udp server frame."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
net2 = "0.2.34"
num_cpus="1.8.0"
bytes = "0.5.6"